--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.16.4",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.11",
+    "mongoose-paginate": "^5.0.3",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
