--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "cors": "^2.8.5",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "express-validator": "^5.3.0",
+    "faker": "^4.1.0",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.11",
     "mongoose-paginate": "^5.0.3",
-    "faker": "^4.1.0",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
