--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "SET NODE_ENV=dev&&SET MONGO_DB=nodejs-api&&nodemon server.js",
-    "test": "SET NODE_ENV=test&&SET MONGO_DB=nodejs-api-test&&jest tests/ --verbose"
+    "dev": "SET NODE_ENV=dev&&nodemon server.js",
+    "test": "SET NODE_ENV=test&&jest tests/ --verbose"
   },
   "keywords": [],
   "author": "",
