--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^3.0.4",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
@@ -20,7 +20,7 @@
     "faker": "^4.1.0",
     "jsonwebtoken": "^8.5.0",
     "mongoose": "^5.4.14",
-    "mongoose-paginate": "^5.0.3",
+    "mongoose-paginate-v2": "^1.3.0",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
