--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "dev": "SET NODE_ENV=dev&&nodemon server.js",
+    "dev": "nodemon server.js",
     "test": "SET NODE_ENV=test&&jest tests/ --verbose"
   },
   "keywords": [],
