--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon server.js",
-    "test": "SET NODE_ENV=test&&jest tests/ --verbose"
+    "test": "SET NODE_ENV=test&&jest --verbose"
   },
   "keywords": [],
   "author": "",
