--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-validator": "^5.3.1",
-    "faker": "^4.1.0",
+    "factory-girl": "^5.0.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.5",
     "mongoose-paginate-v2": "^1.3.0",
